# TEG

./: .gitignore  CMakeLists.txt  README.md
src/: TEG.cpp  TEG.h  main.cpp
